Kubernetes_K8s_PI5_Cluster/registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - name: registry
      protocol: TCP
      port: 5000        # Registry listens on port 5000
      targetPort: 5000  # Forward to container's port 5000
      nodePort: 30001   # Expose on NodePort 30001
  type: NodePort
